andrews first  comment

--- a/Seaship-Struggle.html
+++ b/Seaship-Struggle.html
@@ -2,6 +2,6 @@
 <head><title>Seaship Struggle v1</title></head>
 <body>
     <h1>This is the first version</h1>
-    starting new version.
+    starting new version. <!--heres my first comment-->
 </body>
 </html>      
