next line by Andrew

--- a/Seaship-Struggle.html
+++ b/Seaship-Struggle.html
@@ -3,5 +3,7 @@
 <body>
     <h1>This is the first version</h1>
     starting new version. <!--heres my first comment-->
+
+    <h2>Here is the next line</h2>
 </body>
 </html>          
